<resources>
    <string name="app_name">Sardine</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>

    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="chemmeen">ചെമ്മീൻ </string>
    <string name="chemmeen_eng">Prawns </string>
    <string name="rupee">₹</string>
    <string name="sample_price">120/Kg</string>
    <string name="transiiton">Transition</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="confirm_phone">Confirm Phone Number</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_register">Register</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This phone number is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_phone_mismatch">Phone Numbers do not match</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="txt_buy">Buy now</string>
    <string name="submit">Submit</string>
    <string name="total_qty">Total quantity</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="add_fish">Add fish</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact us</string>
</resources>
