<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/main_nav">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_add_fish"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/add_fish" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact_phone_black_24dp"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
