<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:layout_gravity="center"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:transitionName="image_trans"
            />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/upperLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_below="@+id/image">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/malayalam_text"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chemmeen"
                android:textStyle="bold"
                android:transitionName="malayalam_trans"
                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/english_text"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/chemmeen_eng"
                android:textSize="18sp"
                android:transitionName="eng_trans"
                />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/rupee"
                    android:textSize="20sp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/price"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/sample_price"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:transitionName="price_trans"
                    />

            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
        <Button
            android:id="@+id/btn_buy"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/txt_buy"
            android:theme="@style/PrimaryButton" />
    </RelativeLayout>
</android.support.v7.widget.CardView>