<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="32dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginTop="34dp"
                    app:srcCompat="@drawable/fish_round" />
                <ProgressBar android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/determinateBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_gravity="center"
                    />
            </FrameLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/widg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_marginBottom="10dp"
                android:textColorHint="#000">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:textColor="#000" />


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/widg_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/widg_name"
                android:layout_marginBottom="16dp"
                android:textColorHint="#000">

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/total_qty"
                    android:maxLines="1"
                    android:textColor="#000"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widg_total_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/widg_price"
                android:layout_marginBottom="10dp"
                android:textColorHint="#000">

                <EditText
                    android:id="@+id/total_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:maxLines="1"
                    android:textColor="#000"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:theme="@style/PrimaryButton"
        android:layout_margin="10dp"/>
</RelativeLayout>
